Add a basic jlink-built runtime"